--- a/css/themes.css
+++ b/css/themes.css
@@ -288,5 +288,5 @@ body[theme="bas1c"] {
   --text-secondary: black;
 }
 body[theme="bas1c"] * {
-  font-family: "Hedvig Letters Serif";
+  font-family: "Kalnia";
   
