--- a/css/themes.css
+++ b/css/themes.css
@@ -49,7 +49,7 @@ body[theme="pink"] {
   --text: #39ff14;
   --text-secondary: #39ff14;
 }
-body[theme="blue"] {
+body[theme="ekampookie"] {
   --background: #062a78;
   --theme: #062a78;
   --text: #b0c4de;
